[tool.poetry]
name = "module5"
version = "0.1.0"
description = ""
authors = ["Alexey <bystrovalexey15@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
isort = "^5.13.2"
mypy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
